--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.jricardo.cadastrocliente.FormularioActivity"
+    tools:context="com.example.ray.jachegou.CadastroUsuarioActivity"
     android:background="#104E8B">
     <LinearLayout
         android:layout_width="match_parent"
