--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -5,20 +5,11 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#1874CD">
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textSize="40dp"
-        android:text="TEste de escrita"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:fontFamily="Timer new Rome"/>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
+        android:orientation="horizontal"
         android:padding="5sp"
         android:id="@+id/teste">
         <ImageView
@@ -30,14 +21,29 @@
             android:id="@+id/valor"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
-            android:textSize="50dp"
+            android:textColor="@android:color/black"
+            android:textSize="30dp"
             android:text="R$ 10,50"
             android:textAlignment="center"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"
+            android:background="@android:color/white"
             android:layout_alignBottom="@+id/imagemview"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
-   </RelativeLayout>
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/black"
+            android:textSize="30dp"
+            android:text="TEste de escrita"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:fontFamily="Timer new Rome"
+            android:background="@android:color/white"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+    </RelativeLayout>
 </LinearLayout>
