--- a/app/src/main/res/layout/activity_informacoes_produto.xml
+++ b/app/src/main/res/layout/activity_informacoes_produto.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.ray.jachegou.CadastroUsuarioActivity"
+    android:background="#104E8B">
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -6,7 +12,7 @@
     android:orientation="vertical"
     android:background="#1874CD">
     <TextView
-        android:id="@+id/text"
+        android:id="@+id/nomeProdutoInf"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="@android:color/white"
@@ -22,20 +28,33 @@
         android:padding="5sp"
         android:id="@+id/teste">
         <ImageView
-            android:id="@+id/imagemview"
+            android:id="@+id/imagemViewInf"
             android:layout_width="fill_parent"
             android:layout_height="300dp"
-            android:src="@drawable/img1"/>
+            android:src="@drawable/img1"
+            android:padding="0dp"
+            android:layout_margin="0dp"/>
         <TextView
-            android:id="@+id/valor"
+            android:id="@+id/valorInf"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/holo_red_dark"
+            android:textColor="@android:color/white"
             android:textSize="50dp"
             android:text="R$ 10,50"
             android:textAlignment="center"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"/>
+        <TextView
+            android:id="@+id/textIngredientes"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/holo_red_dark"
+            android:textSize="20dp"
+            android:text=""
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:fontFamily="Timer new Rome"/>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -47,16 +66,20 @@
             android:text="+"
             android:textSize="25dp"
             android:textStyle="bold"
-            android:fontFamily="Timer new Rome"/>
+            android:fontFamily="Timer new Rome"
+            android:background="#104E8B"
+            android:textColor="@android:color/white"
+            android:layout_marginBottom="10dp"/>
         <TextView
-            android:id="@+id/valorTexview"
+            android:id="@+id/qtsPedido"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="40dp"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            android:textColor="@android:color/white"/>
         <Button
             android:id="@+id/btnDiminuir"
             android:layout_width="94dp"
@@ -64,7 +87,30 @@
             android:text="-"
             android:textSize="25dp"
             android:textStyle="bold"
-            android:fontFamily="Timer new Rome"/>
+            android:fontFamily="Timer new Rome"
+            android:background="#104E8B"
+            android:textColor="@android:color/white"/>
 
     </LinearLayout>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Continuar Comprando"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:background="#104E8B"
+        android:id="@+id/btnContinuar"
+        android:layout_marginBottom="10dp"/>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Fechar Pedido"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:textSize="20dp"
+        android:background="#104E8B"
+        android:id="@+id/btnFechar"
+        android:layout_marginBottom="10dp"/>
 </LinearLayout>
+</ScrollView>
