--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -30,7 +30,11 @@
             android:background="@android:color/white"
             android:layout_alignBottom="@+id/imagemview"
             android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
+            android:layout_alignParentStart="true"
+            android:bottomLeftRadius="10dp"
+            android:bottomRightRadius="10dp"
+            android:topLeftRadius="10dp"
+            android:topRightRadius="10dp"/>
 
         <TextView
             android:id="@+id/text"
@@ -44,6 +48,10 @@
             android:fontFamily="Timer new Rome"
             android:background="@android:color/white"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true" />
+            android:layout_centerHorizontal="true"
+            android:bottomLeftRadius="10dp"
+            android:bottomRightRadius="10dp"
+            android:topLeftRadius="10dp"
+            android:topRightRadius="10dp"/>
     </RelativeLayout>
 </LinearLayout>
