Adicionando Sugetao Edit e Carregar por Demanda 20/04/2016

--- a/app/src/main/res/layout/content_lista_produtos.xml
+++ b/app/src/main/res/layout/content_lista_produtos.xml
@@ -11,7 +11,8 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.ray.jachegou.ListaProdutos"
     tools:showIn="@layout/app_bar_lista_produtos"
-    android:background="#1874CD">
+    android:background="#1874CD"
+    android:screenOrientation="portrait">
 
     <ListView
         android:layout_width="fill_parent"
