--- a/app/src/main/res/layout/activity_filtros_consulta.xml
+++ b/app/src/main/res/layout/activity_filtros_consulta.xml
@@ -9,7 +9,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ray_pc.jachegou.FiltrosConsulta"
     android:screenOrientation="portrait"
-    android:background="@drawable/fundo">
+    android:background="@drawable/fundo"
+    >
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
