--- a/app/src/main/res/layout/activity_cadastro_usuario.xml
+++ b/app/src/main/res/layout/activity_cadastro_usuario.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:layout_width="fill_parent"
             android:layout_height="400dp"
-            android:maxWidth="400dp"
+            android:maxHeight="400dp"
             android:id="@+id/cadastroFotoUsuario"
             android:layout_marginTop="31dp"
             android:src="@drawable/icn_cliente"
@@ -37,8 +37,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/nomeCliente"
-            android:hint="@string/nome_cliente"
-            android:textSize="25dp" />
+            android:textSize="25dp"
+            android:textColor="@android:color/white"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -54,7 +54,7 @@
             android:inputType="phone"
             android:ems="10"
             android:id="@+id/telefoneCliente"
-            android:hint="@string/telefone_cliente"
+            android:textColor="@android:color/white"
             android:textSize="25dp" />
 
 
@@ -70,7 +70,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/ruaEndereco"
-            android:hint="@string/endereco_cliente"
+            android:textColor="@android:color/white"
             android:textSize="25dp" />
         <TextView
             android:layout_width="wrap_content"
@@ -84,7 +84,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/bairroCliente"
-            android:hint="Bairro, Local"
+            android:textColor="@android:color/white"
             android:textSize="25dp"
             />
         <TextView
@@ -99,7 +99,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/numeroCliente"
-            android:hint="Numero Casa"
+            android:textColor="@android:color/white"
             android:textSize="25dp"
             android:inputType="number"/>
         <TextView
@@ -113,7 +113,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:id="@+id/cep"
-            android:hint="CEP"
+            android:textColor="@android:color/white"
             android:textSize="25dp"
             android:inputType="number"/>
 
@@ -131,7 +131,7 @@
             android:inputType="textEmailAddress"
             android:ems="10"
             android:id="@+id/emailCliente"
-            android:hint="@string/email_cliente"
+            android:textColor="@android:color/white"
             android:textSize="25dp" />
 
         <TextView
@@ -148,7 +148,7 @@
             android:inputType="textPassword"
             android:ems="10"
             android:id="@+id/senhaCliente"
-            android:hint="Digite sua Senha"
+            android:textColor="@android:color/white"
             android:textSize="25dp" />
 
 
