--- a/app/src/main/res/layout/activity_finalizar_pedido.xml
+++ b/app/src/main/res/layout/activity_finalizar_pedido.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,13 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.ray.jachegou.ListaProdutos"
-    tools:showIn="@layout/app_bar_lista_produtos"
-    android:background="@android:color/white"
-    android:screenOrientation="portrait"
-    android:padding="0dp">
-
-
+    tools:context="com.example.ray.jachegou.FinalizarPedido">
 
 </RelativeLayout>
