--- a/app/src/main/res/layout/activity_finalizar_pedido.xml
+++ b/app/src/main/res/layout/activity_finalizar_pedido.xml
@@ -3,24 +3,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="5dp"
     tools:context="com.example.ray.jachegou.FinalizarPedido"
     android:orientation="vertical">
     <ListView
         android:layout_width="fill_parent"
-        android:layout_height="390dp"
-        android:id="@+id/listaViewFinalizar">
+        android:layout_height="410dp"
+        android:id="@+id/listaViewFinalizar"
+        android:layout_margin="0dp"
+        android:padding="0dp">
     </ListView>
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:id="@+id/txValorTotalPedido"
-        android:textSize="30dp"
+        android:textSize="28dp"
         android:textColor="@android:color/holo_red_dark"
-        android:text="VALOR TOTAL: R$ 0,00"
+        android:text="TOTAL: R$ 0,00"
         android:textAlignment="center"/>
     <Button
         android:layout_width="fill_parent"
@@ -31,8 +30,8 @@
         android:textSize="20dp"
         android:background="#104E8B"
         android:id="@+id/btnFinalizar"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"/>
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -42,6 +41,6 @@
         android:textSize="20dp"
         android:background="#104E8B"
         android:id="@+id/btnCancelarPedido"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"/>
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"/>
 </LinearLayout>
