Excluindo itens desnessarios

--- a/app/src/main/res/layout/drawer_item_layout.xml
+++ b/app/src/main/res/layout/drawer_item_layout.xml
@@ -20,7 +20,7 @@
         android:id="@+id/tv_NavTitle"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="#000000"
-        android:textSize="18sp"
+        android:textSize="18dp"
         android:textStyle="bold"/>
 
 </LinearLayout>
