--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -3,7 +3,8 @@
     android:orientation="vertical"
     android:paddingBottom="3dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@android:color/holo_blue_dark">
 
     <ImageView
         android:layout_width="match_parent"
@@ -15,6 +16,8 @@
         android:layout_height="wrap_content"
         android:text="RAY JOEL DUQUE"
         android:textAlignment="center"
-        android:textSize="25dp"
-        android:textColor="@android:color/black"/>
+        android:textSize="30dp"
+        android:textStyle="bold"
+        android:fontFamily="Timer New Rome"
+        android:textColor="@android:color/white"/>
 </LinearLayout>
