--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,11 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FFFFFF</color>
     <color name="statusBarColor">#4169E1</color>
     <color name="toolBarColor">#4682B4</color>
+
+    <color name="corUm">#2E2EFE</color>
+    <color name="CorDois">#08088A</color>
+    <color name="CorTres">#FFFFFF</color>
 </resources>
