--- a/app/src/main/res/layout/activity_tela_principal_controler.xml
+++ b/app/src/main/res/layout/activity_tela_principal_controler.xml
@@ -12,28 +12,29 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/containerView"
-        android:background="@android:color/holo_blue_dark">
+        android:background="@android:color/holo_blue_light">
 
         <android.support.v7.widget.Toolbar
             xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:minHeight="?android:attr/actionBarSize"
             android:background="?attr/colorPrimary"
             android:id="@+id/toolBar"
             android:fitsSystemWindows="true"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
+            android:gravity="top"
+            />
 
     </FrameLayout>
 
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="250dp"
+        android:layout_width="300dp"
         android:layout_height="match_parent"
         android:id="@+id/recyclerView"
         android:scrollbars="vertical"
-        android:background="@android:color/white"
+        android:background="#FFFFFF"
         android:layout_gravity="left"
         />
-
 </android.support.v4.widget.DrawerLayout>
