--- a/app/src/main/res/layout/activity_vizualizar_produto.xml
+++ b/app/src/main/res/layout/activity_vizualizar_produto.xml
@@ -36,6 +36,7 @@
             android:src="@drawable/img1"
             android:padding="0dp"
             android:layout_margin="0dp"/>
+
         <TextView
             android:id="@+id/valorInf"
             android:layout_width="fill_parent"
@@ -46,7 +47,26 @@
             android:textAlignment="center"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"/>
-
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="INGREDIENTES"
+            android:textColor="@android:color/white"
+            android:textSize="30dp"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:fontFamily="Timer new Rome"/>
+        <TextView
+            android:id="@+id/txtIngredientes"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:textSize="20dp"
+            android:text="Ingredientes"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:fontFamily="Timer new Rome"
+            android:padding="5dp"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
