--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,7 +42,7 @@
                 />
 
             <AutoCompleteTextView
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="12dp"
                 android:id="@+id/email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
                 android:textColor="@android:color/white"
                 android:text="admin"/>
             <EditText
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="12dp"
                 android:id="@+id/EditSenha"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -68,6 +68,14 @@
                 android:textColor="@android:color/white"
                 android:textSize="25dp"
                 android:text="123"/>
+            <CheckBox
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Mostrar Senha"
+                android:textSize="22dp"
+                android:textColor="@android:color/white"
+                android:id="@+id/chkMostrarSenha"
+                android:checked="@android:color/white"/>
 
             <TextView
                 android:layout_marginTop="5dp"
@@ -88,8 +96,6 @@
                 android:textColor="@android:color/white"
                 android:textSize="20dp"
                 android:background="#1874CD" />
-
-
 
             <Button
                 android:id="@+id/cadastro"
