--- a/app/src/main/res/layout/activity_tela_principal_controler.xml
+++ b/app/src/main/res/layout/activity_tela_principal_controler.xml
@@ -7,12 +7,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.ray.jachegou.TelaPrincipalControler">
 
-    <FrameLayout
-        android:orientation="vertical"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:id="@+id/containerView"
-        android:background="@android:color/holo_blue_light">
+        android:background="@android:color/white">
 
         <android.support.v7.widget.Toolbar
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -26,15 +26,16 @@
             android:gravity="top"
             />
 
-    </FrameLayout>
+    </LinearLayout>
 
 
     <android.support.v7.widget.RecyclerView
-        android:layout_width="290dp"
-        android:layout_height="match_parent"
         android:id="@+id/recyclerView"
-        android:scrollbars="vertical"
-        android:background="#FFFFFF"
+        android:layout_width="300dp"
+        android:layout_height="match_parent"
         android:layout_gravity="left"
-        />
+        android:background="#ffffff"
+        android:scrollbars="vertical">
+    </android.support.v7.widget.RecyclerView>
+
 </android.support.v4.widget.DrawerLayout>
