--- a/app/src/main/res/layout/activity_vizualizar_produto.xml
+++ b/app/src/main/res/layout/activity_vizualizar_produto.xml
@@ -4,20 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.ray.jachegou.CadastroUsuarioActivity"
-    android:background="#104E8B">
+    android:background="@color/colorAccent">
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#1874CD"
+    android:background="@color/colorAccent"
     android:padding="5dp">
     <TextView
         android:id="@+id/nomeProdutoInf"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:textSize="30dp"
+        android:textColor="@color/corTextViewUm"
+        android:textSize="35dp"
         android:text="TEste de escrita"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -41,7 +41,7 @@
             android:id="@+id/valorInf"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
+            android:textColor="@color/corTextViewUm"
             android:textSize="50dp"
             android:text="R$ 10,50"
             android:textAlignment="center"
@@ -51,7 +51,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="INGREDIENTES"
-            android:textColor="@android:color/white"
+            android:textColor="@color/corTextViewUm"
             android:textSize="30dp"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -60,7 +60,7 @@
             android:id="@+id/txtIngredientes"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/white"
+            android:textColor="@color/corTextViewUm"
             android:textSize="20dp"
             android:text="Ingredientes"
             android:textAlignment="center"
@@ -71,6 +71,29 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
+        <Button
+            android:id="@+id/btnDiminuir"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:textSize="45dp"
+            android:textStyle="bold"
+            android:fontFamily="Timer new Rome"
+            android:background="#104E8B"
+            android:textColor="@android:color/white"/>
+        <TextView
+            android:id="@+id/qtsPedido"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="wrap_content"
+            android:text="0"
+            android:textSize="40dp"
+            android:textStyle="bold"
+            android:fontFamily="Timer new Rome"
+            android:textAlignment="center"
+            android:textColor="@color/corTextViewUm"/>
+
         <Button
             android:id="@+id/btnAumentar"
             android:layout_width="0dp"
@@ -83,28 +106,6 @@
             android:background="#104E8B"
             android:textColor="@android:color/white"
             android:layout_marginBottom="10dp"/>
-        <TextView
-            android:id="@+id/qtsPedido"
-            android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textSize="40dp"
-            android:textStyle="bold"
-            android:fontFamily="Timer new Rome"
-            android:textAlignment="center"
-            android:textColor="@android:color/white"/>
-        <Button
-            android:id="@+id/btnDiminuir"
-            android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="-"
-            android:textSize="45dp"
-            android:textStyle="bold"
-            android:fontFamily="Timer new Rome"
-            android:background="#104E8B"
-            android:textColor="@android:color/white"/>
 
     </LinearLayout>
     <Button
