--- a/app/src/main/res/layout/drawer_item_layout.xml
+++ b/app/src/main/res/layout/drawer_item_layout.xml
@@ -19,7 +19,7 @@
         android:layout_marginLeft="30dp"
         android:id="@+id/tv_NavTitle"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="#000000"
+        android:textColor="@android:color/holo_blue_dark"
         android:textSize="18dp"
         android:textStyle="bold"/>
 
