--- a/app/src/main/res/layout/fragment_fragment_filtros_produtos.xml
+++ b/app/src/main/res/layout/fragment_fragment_filtros_produtos.xml
@@ -8,47 +8,47 @@
                 android:layout_height="wrap_content"
                 android:text="Produto:"
                 android:textSize="30dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/corTextViewUm"
                 android:textAlignment="center"
                 android:layout_marginTop="40dp"/>
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="25dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/corTextViewUm"
                 android:id="@+id/produtoDescricao"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Categoria:"
                 android:textSize="30dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/corTextViewUm"
                 android:textAlignment="center"/>
             <AutoCompleteTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="25dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/corTextViewUm"
                 android:id="@+id/categoriaPesquisar"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Estabelecimento:"
                 android:textSize="30dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/corTextViewUm"
                 android:textAlignment="center"/>
             <AutoCompleteTextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="25dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/corTextViewUm"
                 android:id="@+id/estabelecimentosEdit"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Valor até:"
                 android:textSize="30dp"
-                android:textColor="@android:color/white"
+                android:textColor="@color/corTextViewUm"
                 android:textAlignment="center"/>
 
             <TextView
@@ -57,7 +57,7 @@
                 android:textSize="30dp"
                 android:id="@+id/valorUm"
                 android:text="R$ 0,00"
-                android:textColor="@android:color/white"
+                android:textColor="@color/corTextViewUm"
                 android:textAlignment="center"/>
             <SeekBar
                 android:layout_marginTop="20dp"
@@ -74,7 +74,10 @@
                 android:background="@android:color/transparent"
                 android:textAlignment="center"
                 android:drawableTop="@drawable/lupa"
-                android:layout_marginTop="10dp"/>
+                android:layout_marginTop="10dp"
+                android:text="Consultar"
+                android:textColor="@color/corTextViewUm"
+                android:textSize="25dp"/>
 </LinearLayout>
 
 
