--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,14 +6,14 @@
         <ImageView
             android:id="@+id/imagemview"
             android:layout_width="fill_parent"
-            android:layout_height="250dp"
+            android:layout_height="300dp"
             android:src="@drawable/img1"/>
         <TextView
             android:id="@+id/valor"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
-            android:textSize="30dp"
+            android:textColor="@color/corTextViewUm"
+            android:textSize="35dp"
             android:text="R$ 10,50"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -31,7 +31,7 @@
             android:id="@+id/text"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
+            android:textColor="@color/corTextViewUm"
             android:textSize="30dp"
             android:text="TEste de escrita"
             android:textAlignment="center"
