--- a/app/src/main/res/layout/item_pedido.xml
+++ b/app/src/main/res/layout/item_pedido.xml
@@ -12,7 +12,7 @@
         android:layout_weight="4"
         android:layout_height="wrap_content"
         android:textSize="14dp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/corTextViewUm"
         android:textAlignment="center"
         android:id="@+id/nomeItemPedido"/>
     <ImageView
@@ -25,7 +25,7 @@
         android:layout_weight="4"
         android:layout_height="wrap_content"
         android:textSize="14dp"
-        android:textColor="@android:color/black"
+        android:textColor="@color/corTextViewUm"
         android:textAlignment="center"
         android:id="@+id/dataItemPedido"/>
 </LinearLayout>
