--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,7 @@
     <color name="corUm">#2E2EFE</color>
     <color name="CorDois">#08088A</color>
     <color name="CorTres">#FFFFFF</color>
+
+
+    <color name="corTextViewUm">#104E8B</color>
 </resources>
