--- a/app/src/main/res/layout/activity_finalizar_pedido.xml
+++ b/app/src/main/res/layout/activity_finalizar_pedido.xml
@@ -14,34 +14,44 @@
         android:layout_margin="0dp"
         android:padding="0dp">
     </ListView>
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/txValorTotalPedido"
-        android:textSize="28dp"
-        android:textColor="@color/corTextViewUm"
-        android:text="TOTAL: R$ 0,00"
-        android:textAlignment="center"        />
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="FINALIZAR"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:textSize="20dp"
-        android:background="#104E8B"
-        android:id="@+id/btnFinalizar"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"/>
-    <Button
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="CANCELAR"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:textSize="20dp"
-        android:background="#104E8B"
-        android:id="@+id/btnCancelarPedido"
-        android:layout_marginBottom="5dp"
-        android:layout_marginTop="5dp"/>
+    <ScrollView
+        android:id="@+id/login_form"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/txValorTotalPedido"
+                android:textSize="28dp"
+                android:textColor="@color/corTextViewUm"
+                android:text="TOTAL: R$ 0,00"
+                android:textAlignment="center"        />
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="FINALIZAR"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="20dp"
+                android:background="#104E8B"
+                android:id="@+id/btnFinalizar"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"/>
+            <Button
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="CANCELAR"
+                android:textStyle="bold"
+                android:textColor="@android:color/white"
+                android:textSize="20dp"
+                android:background="#104E8B"
+                android:id="@+id/btnCancelarPedido"
+                android:layout_marginBottom="5dp"
+                android:layout_marginTop="5dp"/>
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
