--- a/app/src/main/res/layout/activity_tela_principal_controler.xml
+++ b/app/src/main/res/layout/activity_tela_principal_controler.xml
@@ -19,7 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:minHeight="?android:attr/actionBarSize"
-            android:background="?attr/colorPrimary"
+            android:background="@color/corTextViewUm"
             android:id="@+id/toolBar"
             android:fitsSystemWindows="true"
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
@@ -31,7 +31,7 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerView"
-        android:layout_width="300dp"
+        android:layout_width="280dp"
         android:layout_height="match_parent"
         android:layout_gravity="left"
         android:background="#ffffff"
