--- a/app/src/main/res/layout/activity_vizualizar_produto.xml
+++ b/app/src/main/res/layout/activity_vizualizar_produto.xml
@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.ray.jachegou.CadastroUsuarioActivity"
-    android:background="@color/colorAccent">
+    android:background="@color/corFundo">
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="@color/colorAccent"
+    android:background="@color/corFundo"
     android:padding="5dp">
     <TextView
         android:id="@+id/nomeProdutoInf"
