--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="178dp"
-    android:background="@android:color/holo_blue_dark"
+    android:background="@color/corTextViewUm"
     android:orientation="vertical"
     android:weightSum="1">
 
