--- a/app/src/main/res/layout/activity_finalizar_pedido.xml
+++ b/app/src/main/res/layout/activity_finalizar_pedido.xml
@@ -37,7 +37,7 @@
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
                 android:textSize="20dp"
-                android:background="#104E8B"
+                android:background="@color/corBotoes"
                 android:id="@+id/btnFinalizar"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"/>
@@ -48,7 +48,7 @@
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
                 android:textSize="20dp"
-                android:background="#104E8B"
+                android:background="@color/corBotoes"
                 android:id="@+id/btnCancelarPedido"
                 android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"/>
