--- a/app/src/main/res/layout/activity_redefinir_senha.xml
+++ b/app/src/main/res/layout/activity_redefinir_senha.xml
@@ -43,6 +43,6 @@
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="24dp"
-        android:background="#104E8B" />
+        android:background="#2fabe5" />
 
 </LinearLayout>
