--- a/app/src/main/res/layout/activity_vizualizar_pedido.xml
+++ b/app/src/main/res/layout/activity_vizualizar_pedido.xml
@@ -29,7 +29,7 @@
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="20dp"
-        android:background="#104E8B"
+        android:background="@color/corBotoes"
         android:id="@+id/btnSairPedidoAntigo"
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"/>
