--- a/app/src/main/res/layout/activity_vizualizar_produto.xml
+++ b/app/src/main/res/layout/activity_vizualizar_produto.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:textColor="@color/corTextViewUm"
         android:textSize="35dp"
-        android:text="TEste de escrita"
+        android:text="Descrição Produto"
         android:textAlignment="center"
         android:textStyle="bold"
         android:fontFamily="Timer new Rome"/>
@@ -80,7 +80,7 @@
             android:textSize="45dp"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"
-            android:background="#104E8B"
+            android:background="@color/corBotoes"
             android:textColor="@android:color/white"/>
         <TextView
             android:id="@+id/qtsPedido"
@@ -103,7 +103,7 @@
             android:textSize="45dp"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"
-            android:background="#104E8B"
+            android:background="@color/corBotoes"
             android:textColor="@android:color/white"
             android:layout_marginBottom="10dp"/>
 
@@ -115,7 +115,7 @@
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="20dp"
-        android:background="#104E8B"
+        android:background="@color/corBotoes"
         android:id="@+id/btnContinuar"
         android:layout_marginBottom="10dp"
         android:layout_marginTop="10dp"/>
@@ -126,7 +126,7 @@
         android:textStyle="bold"
         android:textColor="@android:color/white"
         android:textSize="20dp"
-        android:background="#104E8B"
+        android:background="@color/corBotoes"
         android:id="@+id/btnFechar"
         android:layout_marginBottom="10dp"/>
 </LinearLayout>
