--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Login"
+    tools:context=".TelaLogin"
     android:screenOrientation="portrait"
     android:background="#1874CD">
 
@@ -94,7 +94,7 @@
                 android:text="AUTENTICAR"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:textSize="24dp"
+                android:textSize="18dp"
                 android:background="#2fabe5" />
 
             <Button
@@ -106,7 +106,7 @@
                 android:text="@string/cadastar"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:background="#2fabe5"/>
             <Button
                 android:id="@+id/btNaoLembraSenha"
@@ -117,7 +117,7 @@
                 android:text="Redefinir Senha"
                 android:textStyle="bold"
                 android:textColor="@android:color/white"
-                android:textSize="20dp"
+                android:textSize="18dp"
                 android:background="#2fabe5" />
         </LinearLayout>
     </ScrollView>
