--- a/app/src/main/res/layout/activity_vizualizar_produto.xml
+++ b/app/src/main/res/layout/activity_vizualizar_produto.xml
@@ -17,7 +17,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="@color/corTextViewUm"
-        android:textSize="35dp"
+        android:textSize="32dp"
         android:text="Descrição Produto"
         android:textAlignment="center"
         android:textStyle="bold"
@@ -42,7 +42,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/corTextViewUm"
-            android:textSize="50dp"
+            android:textSize="45dp"
             android:text="R$ 10,50"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:text="INGREDIENTES"
             android:textColor="@color/corTextViewUm"
-            android:textSize="30dp"
+            android:textSize="26dp"
             android:textAlignment="center"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"/>
@@ -61,7 +61,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/corTextViewUm"
-            android:textSize="20dp"
+            android:textSize="18dp"
             android:text="Ingredientes"
             android:textAlignment="center"
             android:textStyle="bold"
@@ -77,7 +77,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="-"
-            android:textSize="45dp"
+            android:textSize="30dp"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"
             android:background="@color/corBotoes"
@@ -88,7 +88,7 @@
             android:layout_weight="2"
             android:layout_height="wrap_content"
             android:text="0"
-            android:textSize="40dp"
+            android:textSize="32dp"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"
             android:textAlignment="center"
@@ -100,7 +100,7 @@
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:text="+"
-            android:textSize="45dp"
+            android:textSize="30dp"
             android:textStyle="bold"
             android:fontFamily="Timer new Rome"
             android:background="@color/corBotoes"
@@ -111,10 +111,10 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Continuar Comprando"
+        android:text="Adicionar ao Pedido"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:background="@color/corBotoes"
         android:id="@+id/btnContinuar"
         android:layout_marginBottom="10dp"
@@ -125,9 +125,19 @@
         android:text="Fechar Pedido"
         android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:textSize="20dp"
+        android:textSize="18dp"
         android:background="@color/corBotoes"
         android:id="@+id/btnFechar"
+        android:layout_marginBottom="10dp"/>
+    <Button
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Cancelar"
+        android:textStyle="bold"
+        android:textColor="@android:color/white"
+        android:textSize="18dp"
+        android:background="@color/corBotoes"
+        android:id="@+id/btnCancelar"
         android:layout_marginBottom="10dp"/>
 </LinearLayout>
 </ScrollView>
