--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -13,13 +13,7 @@
     android:background="#1874CD">
 
     <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone"/>
+
 
     <ScrollView
         android:id="@+id/login_form"
@@ -119,9 +113,15 @@
                 android:textColor="@android:color/white"
                 android:textSize="18dp"
                 android:background="#2fabe5" />
+            <ProgressBar
+                android:id="@+id/login_progress"
+                style="?android:attr/progressBarStyleLarge"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:visibility="gone"
+                />
         </LinearLayout>
     </ScrollView>
-
-
 </LinearLayout>
 
